--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,14 @@
-.App {
+body {
   margin: 0;
-  padding: 0;
+}
+
+header {
+  background-color: #404040;
+  padding: 1rem;
+}
+
+header a {
+  color: #ffffff;
+  font-weight: bold;
+  text-decoration: none;
 }
