--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,13 +13,25 @@
 }
 
 .star-rating {
-  color: #00ff95;
-}
-
-.review-count {
-  color: #0e0e0e;
+  color: #009664;
 }
 
 img.large {
   max-width: 100%;
+}
+
+.nav-link {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* Dark Theme */
+.custom-navbar-dark {
+  background-color: #333;
+}
+
+/* Light Theme */
+.custom-navbar-light {
+  background-color: #f8f9fa;
 }
