create cart page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,10 @@ img.large {
   max-width: 100%;
 }
 
+img.thumbnail {
+  height: 80px;
+}
+
 .nav-link {
   white-space: nowrap;
   overflow: hidden;
