--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,6 +24,10 @@ img.thumbnail {
   height: 80px;
 }
 
+.small-container {
+  max-width: 600px;
+}
+
 .nav-link {
   white-space: nowrap;
   overflow: hidden;
