--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,3 +43,13 @@ img.thumbnail {
 .custom-navbar-light {
   background-color: #f8f9fa;
 }
+
+.checkout-steps > div {
+  border-bottom: 0.2rem solid #a0a0a0;
+  color: #a0a0a0;
+}
+
+.checkout-steps > div.active {
+  border-bottom: 0.2rem solid #f08000;
+  color: #f08000;
+}
